; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_c-typeprint.c_c_type_print_modifier.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_c-typeprint.c_c_type_print_modifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.type = type { i32 }
%struct.ui_file = type { i32 }

@TYPE_CODE_REF = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"const\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"volatile\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"@%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.type*, %struct.ui_file*, i32, i32)* @c_type_print_modifier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @c_type_print_modifier(%struct.type* %0, %struct.ui_file* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.type*, align 8
  %6 = alloca %struct.ui_file*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store %struct.type* %0, %struct.type** %5, align 8
  store %struct.ui_file* %1, %struct.ui_file** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %11 = load %struct.type*, %struct.type** %5, align 8
  %12 = call i64 @TYPE_CONST(%struct.type* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %28

14:                                               ; preds = %4
  %15 = load %struct.type*, %struct.type** %5, align 8
  %16 = call i64 @TYPE_CODE(%struct.type* %15)
  %17 = load i64, i64* @TYPE_CODE_REF, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %14
  %20 = load i32, i32* %7, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %19
  %23 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %24 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %23, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %25

25:                                               ; preds = %22, %19
  %26 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %27 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %26, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %9, align 4
  br label %28

28:                                               ; preds = %25, %14, %4
  %29 = load %struct.type*, %struct.type** %5, align 8
  %30 = call i64 @TYPE_VOLATILE(%struct.type* %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %44

32:                                               ; preds = %28
  %33 = load i32, i32* %9, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %38, label %35

35:                                               ; preds = %32
  %36 = load i32, i32* %7, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %35, %32
  %39 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %40 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %39, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %41

41:                                               ; preds = %38, %35
  %42 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %43 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %42, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  store i32 1, i32* %9, align 4
  br label %44

44:                                               ; preds = %41, %28
  %45 = load %struct.type*, %struct.type** %5, align 8
  %46 = call i32 @TYPE_INSTANCE_FLAGS(%struct.type* %45)
  %47 = call i8* @address_space_int_to_name(i32 %46)
  store i8* %47, i8** %10, align 8
  %48 = load i8*, i8** %10, align 8
  %49 = icmp ne i8* %48, null
  br i1 %49, label %50, label %63

50:                                               ; preds = %44
  %51 = load i32, i32* %9, align 4
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %56, label %53

53:                                               ; preds = %50
  %54 = load i32, i32* %7, align 4
  %55 = icmp ne i32 %54, 0
  br i1 %55, label %56, label %59

56:                                               ; preds = %53, %50
  %57 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %58 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %57, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %59

59:                                               ; preds = %56, %53
  %60 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %61 = load i8*, i8** %10, align 8
  %62 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %60, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8* %61)
  store i32 1, i32* %9, align 4
  br label %63

63:                                               ; preds = %59, %44
  %64 = load i32, i32* %9, align 4
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %66, label %72

66:                                               ; preds = %63
  %67 = load i32, i32* %8, align 4
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %69, label %72

69:                                               ; preds = %66
  %70 = load %struct.ui_file*, %struct.ui_file** %6, align 8
  %71 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_filtered(%struct.ui_file* %70, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  br label %72

72:                                               ; preds = %69, %66, %63
  ret void
}

declare dso_local i64 @TYPE_CONST(%struct.type*) #1

declare dso_local i64 @TYPE_CODE(%struct.type*) #1

declare dso_local i32 @fprintf_filtered(%struct.ui_file*, i8*, ...) #1

declare dso_local i64 @TYPE_VOLATILE(%struct.type*) #1

declare dso_local i8* @address_space_int_to_name(i32) #1

declare dso_local i32 @TYPE_INSTANCE_FLAGS(%struct.type*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
